src/objects/Customer_Project_Milestone__c.object
<CustomObject>
    <description>CAS: Customer Project Milestone</description>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Project__c</fullName>
        <label>Customer Project</label>
        <referenceTo>Customer_Project__c</referenceTo>
        <relationshipLabel>Customer Project Milestone</relationshipLabel>
        <relationshipName>Customer_Project_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>External Id for mass upload</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Milestone_Date__c</fullName>
        <label>Milestone Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>CASE (Status__c, 
&quot;Green&quot;, IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;), 
&quot;Yellow&quot;, IMAGE (&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;),
&quot;Red&quot;, IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),
&quot;&quot;)</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF (BLANKVALUE(Actual_Date__c, TODAY()) &lt;= (Milestone_Date__c + 14), &quot;Green&quot;, 
IF (AND(BLANKVALUE(Actual_Date__c, TODAY()) &gt; (Milestone_Date__c + 14), BLANKVALUE(Actual_Date__c, TODAY()) &lt;= (Milestone_Date__c + 28)), &quot;Yellow&quot;, 
&quot;Red&quot;
))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Customer Project Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Project Milestone</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>